--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Add an ToDo Item:</h1>
         <form method="Post" action="add">
+            {% csrf_token %}
             <div>
                 <p>
                     <label for="id_name">Name: </label>
